<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string-array name="menu">
        <item>主页</item>
        <item>提问</item>
        <item>管理名单</item>
        <item>数据统计</item>
    </string-array>
    <string-array name="fragment">
        <item>com.unique.countsystem.fragment.NamedFragment</item>
        <item>com.unique.countsystem.fragment.QuizFragment</item>
        <item>com.unique.countsystem.fragment.InputFragment</item>
        <item>com.unique.countsystem.fragment.OverviewFragment</item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="setting_input_button">导入</string>
    <string name="setting_out_button">导出</string>
    <string name="click">点</string>
    <string name="hour">时</string>
    <string name="named_student_number">人数</string>
    <string name="course">班级</string>
    <string name="fragment_overview_text">数据统计</string>
    <string name="fragment_chart_text">统计图</string>
    <string name="fragment_summary_text">总表</string>
    <string name="title_activity_setting">设置</string>
    <string name="title_activity_named">点名</string>
    <string name="app_name">点点</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="ask_for_leave">请假</string>
    <string name="truancy">缺勤</string>
    <string name="arrived">到课</string>
    <string name="quiz_next">下一个</string>
    <string name="quiz_finish">结束</string>
    <string name="title_activity_chart">图表</string>
    <string name="title_activity_summary">历史记录</string>
    <string name="name">姓名</string>
    <string name="title_activity_absence">人员总览</string>
    <string name="dialog_read">添加表格</string>

    <string name="sheet_name">姓名</string>
    <string name="sheet_studentId">学号</string>
    <string name="sheet_class">班级</string>
    <string name="sheet_sum">累计</string>
    <string name="title_activity_people">缺勤人员</string>
    <string name="about_text">关于</string>
    <string name="design_info">Design：yuqinhuang@hustunique.com</string>
    <string name="android_info">Android：chenzhao@hustunique.com</string>
    <string name="title_activity_quiz">提问</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="text_output">导出</string>
    <string name="text_input">导入</string>
    <string name="text_delete">删除</string>
    <string name="title_activity_introduce">IntroduceActivity</string>
</resources>
