<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.unique.countsystem.fragment.FinishedFragment">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:gravity="center"
            android:textColor="@color/black"
            android:text="@string/name"
            android:padding="15dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="50dp" />

        <TextView
            android:gravity="center"
            android:textColor="@color/black"
            android:text="@string/arrived"
            android:padding="15dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="50dp" />

        <TextView
            android:gravity="center"
            android:text="@string/ask_for_leave"
            android:textColor="@color/black"
            android:padding="15dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="50dp" />

        <TextView
            android:gravity="center"
            android:text="@string/truancy"
            android:textColor="@color/black"
            android:padding="15dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="50dp" />
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/finished_list"
        android:scrollbars="none"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>
